# example-stag-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
